--- a/todolist/src/index.css
+++ b/todolist/src/index.css
@@ -26,13 +26,37 @@ h3 {
 }
 
 .delete {
-  float: right;
+  display: inline-block;
+  position: absolute;
+  z-index: 10;
+  cursor: pointer;
+  margin: 15px;
+  padding: 5px;
 }
 
 .todo {
   margin: 15px 0;
   padding: 5px;
   border: 1px solid red;
+  position: relative;
+  cursor: pointer;
+  z-index: 1;
+  display: inline-block;
+  width: 100%;
+}
+
+.check-icon {
+  position: absolute;
+    left: -25px;
+    cursor: pointer;
+}
+
+.todo-checked {
+  text-decoration: line-through;
+}
+
+.todo-unchecked {
+  text-decoration: none;
 }
 
  ul li {
@@ -41,4 +65,10 @@ h3 {
 
  .clear {
    display: inline-block;
+   margin: 15px 0;
+   padding: 5px;
+ }
+
+ .done-todos{
+   padding: 10px 0 0 0;
  }
