--- a/food-order-app/src/components/Meals/AvailableMeals.module.css
+++ b/food-order-app/src/components/Meals/AvailableMeals.module.css
@@ -4,6 +4,17 @@
     margin: 2rem auto;
     animation: meals-appear 1s ease-out forwards;
   }
+
+  .MealsLoading {
+    text-align: center;
+    color: white;
+    font-size: 24px;
+  }
+
+  .MealsError {
+    text-align: center;
+    color: red
+  }
   
   .meals ul {
     list-style: none;
